[gd_scene load_steps=3 format=2]

[ext_resource path="res://world/features/column/column.gd" type="Script" id=1]
[ext_resource path="res://world/features/column/assets/column_short.png" type="Texture" id=3]

[node name="Column" type="Node2D"]
light_mask = 0
position = Vector2( 520, 320 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 0
position = Vector2( 0, -29 )
texture = ExtResource( 3 )

[node name="ObscurePosition" type="Position2D" parent="."]
position = Vector2( 0, -67 )

[node name="ObstructionArea" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 32 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ObstructionArea" groups=[
"startup_physics",
]]
polygon = PoolVector2Array( -24, -107, 0, -120, 24, -108, 24, -48, 0, -40, -24, -48 )
[connection signal="area_entered" from="ObstructionArea" to="." method="_on_ObstructionArea_area_entered"]
